tenzir/functional-test/data/reference/vast_server/test_comments/step_01.ref
error: expected operator name
 --> <input>:1:50
  |
1 | export | sort timestamp | select timestamp | /**/
  |                                                  ^ 
  |